--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
@@ -61,6 +61,9 @@
         </nav>
       </div>
     </header>
+    <p class="announcement">Track the adoption of Swift 6 strict concurrency checks for data race safety. How many packages are 
+      <a href="/ready-for-swift-6">Ready for Swift 6</a>?
+    </p>
     <nav class="breadcrumbs">
       <div class="inner">
         <ul>
@@ -80,6 +83,14 @@
         <h2>Ready for Swift 6</h2>
         <p>The Swift 6 language mode prevents data-races at compile time. When you opt into Swift 6 mode, the compiler will produce errors when your code has a risk of concurrent access, turning hard-to-debug runtime failures into compiler errors.</p>
         <p>To track the progress of the Swift package ecosystem, the Swift Package Index is running regular package compatibility checks across all packages in the index.</p>
+        <h3>Total packages compatible with Swift 6</h3>
+        <p>Packages with zero data-race safety compiler diagnostics during a successful build on at least one tested platform.</p>
+        <p>Couldn’t load chart data.</p>
+        <h3>Total Swift 6 concurrency errors</h3>
+        <p>The total number of all data-race safety diagnostics across 
+          <em>all</em> packages.
+        </p>
+        <p>Couldn’t load chart data.</p>
         <h3>Frequently asked questions</h3>
         <p>
           <strong>Q: </strong>What does “compatible” mean in the chart of compatible packages?
@@ -131,14 +142,6 @@
           <a href="/apple">all packages authored by Apple</a>, again with the same criteria as above applied. Nothing newer than March 19th and nothing without commits in the last year. The SSWG incubated data set is the same idea but sourced from the 
           <a href="https://www.swift.org/sswg/#projects">Swift Server Workgroup incubated packages list</a>.
         </p>
-        <h3>Total packages compatible with Swift 6</h3>
-        <p>Packages with zero data-race safety compiler diagnostics during a successful build on at least one tested platform.</p>
-        <p>Couldn’t load chart data.</p>
-        <h3>Total Swift 6 concurrency errors</h3>
-        <p>The total number of all data-race safety diagnostics across 
-          <em>all</em> packages.
-        </p>
-        <p>Couldn’t load chart data.</p>
       </div>
     </main>
     <footer>
