--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MarkdownPageStyling.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_MarkdownPageStyling.1.html
@@ -61,6 +61,9 @@
         </nav>
       </div>
     </header>
+    <p class="announcement">Track the adoption of Swift 6 strict concurrency checks for data race safety. How many packages are 
+      <a href="/ready-for-swift-6">Ready for Swift 6</a>?
+    </p>
     <main>
       <div class="inner"><h1>Header One</h1><h2>Header Two</h2><h3>Header Three</h3><h4>Header Four</h4><h5>Header Five</h5><h6>Header Six</h6><p># Not a Header</p><h2>Basic Formatting</h2><p><em>Italic</em> or <em>Italic</em> <strong>Bold</strong> or <strong>Bold</strong> <s>Strikethrough</s></p><h2>Horizontal Lines</h2><hr><hr><h2>Lists</h2><ul><li>List Item One</li></ul><ul><li>List Item Two</li></ul><ol><li>List Item One</li></ol><ol start="2"><li>List Item Two<ul><li>List Item Two -&gt; Indented<ul><li>List Item Two -&gt; Indented -&gt; Indented</li></ul></li></ul></li></ol><ol start="100"><li>Start with 100</li><li>Continue to 101</li></ol><p>Inline <code>code</code> using backticks.</p><h2>Code</h2><pre><code>$ spi search Markdown
 </code></pre><pre><code class="language-swift">class SyntaxHighlighter {
