--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_missingPackage.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_missingPackage.1.html
@@ -61,6 +61,9 @@
         </nav>
       </div>
     </header>
+    <p class="announcement">Track the adoption of Swift 6 strict concurrency checks for data race safety. How many packages are 
+      <a href="/ready-for-swift-6">Ready for Swift 6</a>?
+    </p>
     <main>
       <div class="inner">
         <h2>Package not found</h2>
