--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ValidateSPIManifest_show.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ValidateSPIManifest_show.1.html
@@ -64,6 +64,9 @@ are indexed. Validate your manifests on this page."/>
         </nav>
       </div>
     </header>
+    <p class="announcement">Track the adoption of Swift 6 strict concurrency checks for data race safety. How many packages are 
+      <a href="/ready-for-swift-6">Ready for Swift 6</a>?
+    </p>
     <main>
       <div class="inner">
         <h2 class="trimmed">Validate a Swift Package Index manifest</h2>
