--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_app_store_incompatible_license.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_app_store_incompatible_license.1.html
@@ -163,7 +163,7 @@
                 <li class="dependencies">This package depends on 2 other packages.</li>
                 <li class="license warning">
                   <a href="https://example.com/license.html" title="GNU General Public License v3.0">GPL 3.0</a> licensed
-                  <a id="license-more-info" href="/faq#licenses">Why might the GPL 3.0 be problematic?</a>
+                  <a class="more-info" href="/faq#licenses">Why might the GPL 3.0 be problematic?</a>
                 </li>
                 <li class="stars">17 stars</li>
                 <li class="libraries">3 libraries</li>
