--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_no_license.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_no_license.1.html
@@ -163,7 +163,7 @@
                 <li class="dependencies">This package depends on 2 other packages.</li>
                 <li class="license error">
                   <span class="no-license">No license</span>
-                  <a id="license-more-info" href="/faq#licenses">Why should you not use unlicensed code?</a>
+                  <a class="more-info" href="/faq#licenses">Why should you not use unlicensed code?</a>
                 </li>
                 <li class="stars">17 stars</li>
                 <li class="libraries">3 libraries</li>
