--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_other_license.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_other_license.1.html
@@ -163,7 +163,7 @@
                 <li class="dependencies">This package depends on 2 other packages.</li>
                 <li class="license warning">
                   <a href="https://example.com/license.html">Unknown license</a>
-                  <a id="license-more-info" href="/faq#licenses">Why is this package's license unknown?</a>
+                  <a class="more-info" href="/faq#licenses">Why is this package's license unknown?</a>
                 </li>
                 <li class="stars">17 stars</li>
                 <li class="libraries">3 libraries</li>
