--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
@@ -217,16 +217,18 @@
                         </p>
                       </div>
                       <div class="column-labels">
+                        <div>6.0
+                          <small>(beta)</small>
+                        </div>
                         <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
-                        <div>5.7</div>
                       </div>
                       <div class="results">
-                        <div class="compatible" title="Built successfully with Swift 5.10"></div>
-                        <div class="unknown" title="No build information available for Swift 5.9"></div>
+                        <div class="compatible" title="Built successfully with Swift 6.0"></div>
+                        <div class="unknown" title="No build information available for Swift 5.10"></div>
+                        <div class="incompatible" title="Build failed with Swift 5.9"></div>
                         <div class="incompatible" title="Build failed with Swift 5.8"></div>
-                        <div class="incompatible" title="Build failed with Swift 5.7"></div>
                       </div>
                     </li>
                     <li class="row">
@@ -236,16 +238,18 @@
                         </p>
                       </div>
                       <div class="column-labels">
+                        <div>6.0
+                          <small>(beta)</small>
+                        </div>
                         <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
-                        <div>5.7</div>
                       </div>
                       <div class="results">
+                        <div class="compatible" title="Built successfully with Swift 6.0"></div>
                         <div class="compatible" title="Built successfully with Swift 5.10"></div>
                         <div class="compatible" title="Built successfully with Swift 5.9"></div>
-                        <div class="compatible" title="Built successfully with Swift 5.8"></div>
-                        <div class="incompatible" title="Build failed with Swift 5.7"></div>
+                        <div class="incompatible" title="Build failed with Swift 5.8"></div>
                       </div>
                     </li>
                   </ul>
