--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_single_row_tables.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_single_row_tables.1.html
@@ -187,16 +187,18 @@
                         </p>
                       </div>
                       <div class="column-labels">
+                        <div>6.0
+                          <small>(beta)</small>
+                        </div>
                         <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
-                        <div>5.7</div>
                       </div>
                       <div class="results">
+                        <div class="compatible" title="Built successfully with Swift 6.0"></div>
                         <div class="compatible" title="Built successfully with Swift 5.10"></div>
                         <div class="compatible" title="Built successfully with Swift 5.9"></div>
                         <div class="compatible" title="Built successfully with Swift 5.8"></div>
-                        <div class="compatible" title="Built successfully with Swift 5.7"></div>
                       </div>
                     </li>
                   </ul>
