Pass through build details from build report

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
@@ -104,7 +104,8 @@
             <strong>Swift 5.9</strong> for 
             <strong>iOS</strong> using 
             <strong>Xcode 15.2</strong> at 
-            <strong>main</strong>.
+            <strong>main</strong> (71b4d8) on 
+            <strong>1 Jan 1970 00:00:00 UTC</strong>.
           </p>
           <h3>Build Command</h3>
           <pre>
