--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.ref-index-path.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_issue_2287.ref-index-path.html
@@ -13,6 +13,8 @@
   <script defer src="/owner/package/feature-1.2.3/js/index.2871ffbd.js"></script> 
   <link href="/owner/package/feature-1.2.3/css/index.ff036a9e.css" rel="stylesheet" /> 
   <link rel="stylesheet" href="/docc.css?test" />
+  <link rel="stylesheet" href="/shared.css?test" />
+  <script src="/shared.js?test" data-turbolinks-track="reload" defer></script>
   <link rel="canonical" href="/owner/package/feature/1.2.3/documentation/a/b" />
  </head> 
  <body data-color-scheme="auto">
@@ -55,5 +57,10 @@
     <a href="https://swiftpackageindex.com">visit swiftpackageindex.com</a>.
    </div>
   </footer>
+  <spi-debug-panel class="hidden">
+   <table>
+    <tbody></tbody>
+   </table>
+  </spi-debug-panel>
  </body>
 </html>
