--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target-a-b.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_documentation_routes_ref.index-target-a-b.html
@@ -13,6 +13,8 @@
   <script defer src="/owner/package/1.2.3/js/index.2871ffbd.js"></script> 
   <link href="/owner/package/1.2.3/css/index.ff036a9e.css" rel="stylesheet" /> 
   <link rel="stylesheet" href="/docc.css?test" />
+  <link rel="stylesheet" href="/shared.css?test" />
+  <script src="/shared.js?test" data-turbolinks-track="reload" defer></script>
   <link rel="canonical" href="/owner/package/1.2.3/documentation/target/a/b#anchor" />
  </head> 
  <body data-color-scheme="auto">
@@ -62,5 +64,10 @@
     <a href="https://swiftpackageindex.com">visit swiftpackageindex.com</a>.
    </div>
   </footer>
+  <spi-debug-panel class="hidden">
+   <table>
+    <tbody></tbody>
+   </table>
+  </spi-debug-panel>
  </body>
 </html>
