--- a/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_issue_2288.index.html
+++ b/Tests/AppTests/__Snapshots__/PackageController+routesTests/test_issue_2288.index.html
@@ -13,6 +13,8 @@
   <script defer src="/foo/bar/~/js/index.2871ffbd.js"></script> 
   <link href="/foo/bar/~/css/index.ff036a9e.css" rel="stylesheet" /> 
   <link rel="stylesheet" href="/docc.css?test" />
+  <link rel="stylesheet" href="/shared.css?test" />
+  <script src="/shared.js?test" data-turbolinks-track="reload" defer></script>
  </head> 
  <body data-color-scheme="auto">
   <header class="spi">
@@ -60,5 +62,10 @@
     <a href="https://swiftpackageindex.com">visit swiftpackageindex.com</a>.
    </div>
   </footer>
+  <spi-debug-panel class="hidden">
+   <table>
+    <tbody></tbody>
+   </table>
+  </spi-debug-panel>
  </body>
 </html>
