--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
@@ -24,11 +24,13 @@
     <link rel="alternate" type="application/rss+xml" title="Swift Package Index – Recent Major Package Releases" href="http://localhost:8080/releases.rss?major=true"/>
     <link rel="alternate" type="application/rss+xml" title="Swift Package Index – Recent Major & Minor Package Releases" href="http://localhost:8080/releases.rss?major=true&minor=true"/>
     <link rel="alternate" type="application/rss+xml" title="Swift Package Index – Recent Package Pre-Releases" href="http://localhost:8080/releases.rss?pre=true"/>
+    <link rel="stylesheet" href="/shared.css?test" data-turbolinks-track="reload"/>
     <link rel="stylesheet" href="/main.css?test" data-turbolinks-track="reload"/>
+    <script src="/shared.js?test" data-turbolinks-track="reload" defer></script>
     <script src="/main.js?test" data-turbolinks-track="reload" defer></script><script async defer data-domain="swiftpackageindex.com" src="https://plausible.io/js/plausible.outbound-links.js"></script>
 <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
   </head>
-  <body><!--CAFECAFE-CAFE-CAFE-CAFE-CAFECAFECAFE-->
+  <body>
     <header>
       <div class="inner">
         <a href="/">
@@ -249,5 +251,15 @@ CompileSwift normal x86_64 /Users/spi/builds/zsxYGgdt/0/finestructure/swiftpacka
         </nav>
       </div>
     </footer>
+    <spi-debug-panel class="hidden">
+      <table>
+        <tbody>
+          <tr server-side>
+            <td>Version ID</td>
+            <td>CAFECAFE-CAFE-CAFE-CAFE-CAFECAFECAFE</td>
+          </tr>
+        </tbody>
+      </table>
+    </spi-debug-panel>
   </body>
 </html>
