--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_BuildShow.1.html
@@ -102,11 +102,12 @@
           <h2>Build Information</h2>
           <p>
             <strong class="green">Successful</strong> build of 
-            <a href="/foo/bar">Bar</a> with 
+            <a href="/foo/bar">Bar</a>, reference 
+            <strong>main</strong> (
+            <code>71b4d8</code>), with 
             <strong>Swift 5.9</strong> for 
             <strong>iOS</strong> using 
-            <strong>Xcode 15.2</strong> at 
-            <strong>main</strong> (71b4d8) on 
+            <strong>Xcode 15.2</strong> on 
             <strong>1 Jan 1970 00:00:00 UTC</strong>.
           </p>
           <h3>Build Command</h3>
