--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_emoji_summary.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_emoji_summary.1.html
@@ -325,7 +325,7 @@
                   <a href="https://github.com/Alamofire/Alamofire/releases/tag/5.2.0">
                     <span class="stable">5.2.0</span>
                   </a>
-                  <strong>Latest Stable Release</strong>
+                  <strong>Latest Release</strong>
                   <small>Released 12 days ago</small>
                 </li>
                 <li class="beta">
