--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_ReadyForSwift6Show.1.html
@@ -145,7 +145,7 @@
         <p>
           <strong>A: </strong>It’s interesting to look at some slices of curated package lists in addition to overall compatibility. Apple should be leading from the front, so the “Apple packages” data set is 
           <a href="/apple">all packages authored by Apple</a>, again with the same criteria as above applied. Nothing newer than March 19th and nothing without commits in the last year. The SSWG incubated data set is the same idea but sourced from the 
-          <a href="https://www.swift.org/sswg/#projects">Swift Server Workgroup incubated packages list</a>.
+          <a href="https://www.swift.org/sswg/incubated-packages.html">Swift Server Workgroup incubated packages list</a>.
         </p>
       </div>
     </main>
