--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_few_keywords.1.html
@@ -218,9 +218,7 @@
                         </p>
                       </div>
                       <div class="column-labels">
-                        <div>6.0
-                          <small>(beta)</small>
-                        </div>
+                        <div>6.0</div>
                         <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
@@ -239,9 +237,7 @@
                         </p>
                       </div>
                       <div class="column-labels">
-                        <div>6.0
-                          <small>(beta)</small>
-                        </div>
+                        <div>6.0</div>
                         <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
