--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_open_source_license.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_open_source_license.1.html
@@ -189,9 +189,7 @@
                         </p>
                       </div>
                       <div class="column-labels">
-                        <div>6.0
-                          <small>(beta)</small>
-                        </div>
+                        <div>6.0</div>
                         <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
@@ -210,9 +208,7 @@
                         </p>
                       </div>
                       <div class="column-labels">
-                        <div>6.0
-                          <small>(beta)</small>
-                        </div>
+                        <div>6.0</div>
                         <div>5.10</div>
                         <div>5.9</div>
                         <div>5.8</div>
