--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_no_builds.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_no_builds.1.html
@@ -177,7 +177,8 @@
                 <a href="/Alamo/Alamofire/builds">Full Build Results</a>
               </div>
               <div class="matrices">
-                <p>This package currently has no compatibility information. Builds to determine package compatibility are starting, and compatibility information will appear soon. If this message persists for more than a few minutes, please 
+                <p>This package currently has no compatibility information. Builds to determine package compatibility are starting, and compatibility information will appear soon.
+                  <br/>If this message persists for more than a few minutes, please 
                   <a href="https://github.com/SwiftPackageIndex/SwiftPackageIndex-Server/issues/new/choose">raise an issue</a>.
                 </p>
               </div>
