Add custom package collection link to custom collections page

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_CustomCollectionShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_CustomCollectionShow.1.html
@@ -83,6 +83,13 @@
     <main>
       <div class="inner">
         <h2 class="trimmed">Packages for collection “Some Collection”</h2>
+        <p>These packages are available as a package collection, 
+          <a href="/package-collections">usable in Xcode 13 or the Swift Package Manager 5.5</a>.
+        </p>
+        <form class="copyable-input">
+          <input type="text" data-button-name="Copy Package Collection URL" data-event-name="Copy Package Collection URL Button" value="http://localhost:8080/collections/Some%20Collection/collection.json" readonly/>
+        </form>
+        <hr class="minor"/>
         <ul id="package-list">
           <li>
             <a href="https://example.com/owner/name.git">
