--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_customCollection.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_customCollection.1.html
@@ -169,7 +169,7 @@
                 <li class="plugins">No plugins</li>
                 <li class="macros">2 macros</li>
                 <li class="custom-collections">
-                  <a href="/collections/Custom Collection">Custom Collection</a>
+                  <a href="/collections/Custom%20Collection">Custom Collection</a>
                 </li>
               </ul>
             </section>
