Use key instead of name for lookups and urls

--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_CustomCollectionShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_CustomCollectionShow.1.html
@@ -7,12 +7,12 @@
     <link rel="canonical" href="http://localhost:8080/"/>
     <meta name="twitter:url" content="http://localhost:8080/"/>
     <meta property="og:url" content="http://localhost:8080/"/>
-    <title>Packages for collection Some Collection &ndash; Swift Package Index</title>
-    <meta name="twitter:title" content="Packages for collection Some Collection &ndash; Swift Package Index"/>
-    <meta property="og:title" content="Packages for collection Some Collection &ndash; Swift Package Index"/>
-    <meta name="description" content="The Swift Package Index is indexing 5 packages for collection Some Collection."/>
-    <meta name="twitter:description" content="The Swift Package Index is indexing 5 packages for collection Some Collection."/>
-    <meta property="og:description" content="The Swift Package Index is indexing 5 packages for collection Some Collection."/>
+    <title>Packages for collection Custom Collection &ndash; Swift Package Index</title>
+    <meta name="twitter:title" content="Packages for collection Custom Collection &ndash; Swift Package Index"/>
+    <meta property="og:title" content="Packages for collection Custom Collection &ndash; Swift Package Index"/>
+    <meta name="description" content="The Swift Package Index is indexing 5 packages for collection Custom Collection."/>
+    <meta name="twitter:description" content="The Swift Package Index is indexing 5 packages for collection Custom Collection."/>
+    <meta property="og:description" content="The Swift Package Index is indexing 5 packages for collection Custom Collection."/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:image" content="http://localhost:8080/images/logo.png"/>
     <meta property="og:image" content="http://localhost:8080/images/logo.png"/>
@@ -75,19 +75,19 @@
             </a>
           </li>
           <li>
-            <span>Some Collection</span>
+            <span>Custom Collection</span>
           </li>
         </ul>
       </div>
     </nav>
     <main>
       <div class="inner">
-        <h2 class="trimmed">Packages for collection “Some Collection”</h2>
+        <h2 class="trimmed">Packages for collection “Custom Collection”</h2>
         <p>These packages are available as a package collection, 
           <a href="/package-collections">usable in Xcode 13 or the Swift Package Manager 5.5</a>.
         </p>
         <form class="copyable-input">
-          <input type="text" data-button-name="Copy Package Collection URL" data-event-name="Copy Package Collection URL Button" value="http://localhost:8080/collections/Some%20Collection/collection.json" readonly/>
+          <input type="text" data-button-name="Copy Package Collection URL" data-event-name="Copy Package Collection URL Button" value="http://localhost:8080/collections/custom-collection/collection.json" readonly/>
         </form>
         <hr class="minor"/>
         <ul id="package-list">
