--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_customCollection.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_PackageShowView_customCollection.1.html
@@ -162,15 +162,15 @@
                   <a href="https://github.com/Alamofire/Alamofire/pulls">5 open pull requests</a>. The last issue was closed 5 days ago and the last pull request was merged/closed 6 days ago.
                 </li>
                 <li class="dependencies">This package depends on 2 other packages.</li>
+                <li class="custom-collections">Member of the 
+                  <a href="/collections/custom-collection">Custom Collection</a> collection.
+                </li>
                 <li class="license"> licensed</li>
                 <li class="stars">17 stars</li>
                 <li class="libraries">3 libraries</li>
                 <li class="executables">1 executable</li>
                 <li class="plugins">No plugins</li>
                 <li class="macros">2 macros</li>
-                <li class="custom-collections">
-                  <a href="/collections/custom-collection">Custom Collection</a>
-                </li>
               </ul>
             </section>
             <hr class="minor"/>
@@ -320,6 +320,13 @@
               </ul>
             </section>
             <hr class="minor"/>
+            <div class="custom-collections-sidebar">
+              <a href="/collections/custom-collection">
+                <div class="custom-collection-badge">
+                  <span>Custom Collection</span>
+                </div>
+              </a>
+            </div>
             <section class="sidebar-versions" aria-label="Versions">
               <ul>
                 <li class="stable">
