--- a/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_AuthorShow.1.html
+++ b/Tests/AppTests/__Snapshots__/WebpageSnapshotTests/test_AuthorShow.1.html
@@ -84,7 +84,7 @@
       <div class="inner">
         <h2 class="trimmed">Packages authored by Test Author</h2>
         <p>These packages are available as a package collection, 
-          <a href="/package-collections">usable in Xcode 13 or the Swift Package Manager 5.5</a>.
+          <a href="/package-collections">usable in Xcode or SwiftPM</a>.
         </p>
         <form class="copyable-input">
           <input type="text" data-button-name="Copy Package Collection URL" data-event-name="Copy Package Collection URL Button" value="http://localhost:8080/test-author/collection.json" readonly/>
